--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private" : true,
 	"devDependencies" : {
-		"grunt": "~0.4.2",
+		"grunt": "~0.4.4",
 		"load-grunt-tasks": "*",
 		"grunt-htmlhint": "*",
 		"grunt-contrib-jshint": "*",
@@ -10,16 +10,21 @@
 		"grunt-contrib-concat": "*",
 		"grunt-remove-logging": "*",
 		"grunt-contrib-uglify": "*",
-		"grunt-contrib-sass": "*",
+		"grunt-sass": "*",
+		"grunt-autoprefixer": "*",
 		"grunt-csscomb": "*",
 		"grunt-cssc": "*",
 		"grunt-contrib-cssmin": "*",
 		"grunt-uncss": "~0.1.7",
+		"grunt-processhtml": "*",
 		"grunt-contrib-htmlmin": "*",
 		"grunt-datauri": "*",
-		"grunt-contrib-imagemin": "*",
+		"grunt-contrib-imagemin": "~0.4.1",
 		"grunt-imageoptim": "*",
 		"grunt-svgmin": "*",
+		"grunt-contrib-watch": "*",
+		"grunt-concurrent": "*",
+		"grunt-newer": "*",
 		"grunt-string-replace": "*",
 		"grunt-contrib-clean": "*",
 		"grunt-contrib-copy": "*",
