--- a/.csscombrc
+++ b/.csscombrc
@@ -32,29 +32,54 @@
     "counter-increment",
     "counter-reset",
     "quotes",
+    "-webkit-appearance",
+    "-moz-appearance",
+    "appearance",
     "display",
     "float",
     "clear",
-    "-webkit-flex-align",
-    "-moz-flex-align",
-    "-ms-flex-align",
-    "-o-flex-align",
-    "flex-align",
+    "-webkit-flex-flow",
+    "-ms-flex-flow",
+    "flex-flow",
+    "-webkit-box-orient",
+    "-webkit-box-direction",
     "-webkit-flex-direction",
-    "-moz-flex-direction",
     "-ms-flex-direction",
-    "-o-flex-direction",
     "flex-direction",
-    "-webkit-flex-order",
-    "-moz-flex-order",
-    "-ms-flex-order",
-    "-o-flex-order",
-    "flex-order",
-    "-webkit-flex-pack",
-    "-moz-flex-pack",
+    "-webkit-flex-wrap",
+    "-ms-flex-wrap",
+    "flex-wrap",
+    "-webkit-box-pack",
+    "-webkit-justify-content",
     "-ms-flex-pack",
-    "-o-flex-pack",
-    "flex-pack",
+    "justify-content",
+    "-webkit-box-align",
+    "-webkit-align-items",
+    "-ms-flex-align",
+    "align-items",
+    "-webkit-align-content",
+    "-ms-flex-line-pack",
+    "align-content",
+    "-webkit-box-ordinal-group",
+    "-webkit-order",
+    "-ms-flex-order",
+    "order",
+    "-webkit-box-flex",
+    "-webkit-flex",
+    "-ms-flex",
+    "flex",
+    "-webkit-flex-grow",
+    "-ms-flex-positive",
+    "flex-grow",
+    "-webkit-flex-shrink",
+    "-ms-flex-negative",
+    "flex-shrink",
+    "-webkit-flex-basis",
+    "-ms-flex-preferred-size",
+    "flex-basis",
+    "-webkit-align-self",
+    "-ms-flex-item-align",
+    "align-self",
     "overflow",
     "-ms-overflow-x",
     "-ms-overflow-y",
@@ -66,6 +91,8 @@
     "-webkit-box-sizing",
     "-moz-box-sizing",
     "box-sizing",
+    "-webkit-box-decoration-break",
+    "box-decoration-break",
     "width",
     "height",
     "min-width",
@@ -182,7 +209,7 @@
     "margin-left",
     "color",
     "background",
-    "filter:progid:DXImageTransform.Microsoft.AlphaImageLoader",
+    "filter: progid:DXImageTransform.Microsoft.AlphaImageLoader",
     "background-color",
     "background-image",
     "background-attachment",
@@ -219,6 +246,11 @@
     "font-stretch",
     "font-size",
     "font-family",
+    "-webkit-font-feature-settings",
+    "-moz-font-feature-settings",
+    "font-feature-settings",
+    "-webkit-font-smoothing",
+    "-moz-osx-font-smoothing",
     "src",
     "text-align",
     "-webkit-text-align-last",
@@ -229,6 +261,8 @@
     "-webkit-text-decoration-color",
     "-moz-text-decoration-color",
     "text-decoration-color",
+    "-webkit-text-decoration-style",
+    "-moz-text-decoration-style",
     "text-decoration-style",
     "text-emphasis",
     "text-emphasis-position",
@@ -261,6 +295,7 @@
     "-moz-tab-size",
     "-o-tab-size",
     "tab-size",
+    "-epub-hyphens",
     "-webkit-hyphens",
     "-moz-hyphens",
     "-ms-hyphens",
@@ -299,12 +334,15 @@
     "-webkit-column-rule-color",
     "-moz-column-rule-color",
     "column-rule-color",
-    "break-before",
-    "break-inside",
-    "break-after",
+    "-webkit-column-break-before",
     "page-break-before",
+    "break-before",
+    "-webkit-column-break-inside",
     "page-break-inside",
+    "break-inside",
+    "-webkit-column-break-after",
     "page-break-after",
+    "break-after",
     "orphans",
     "widows",
     "list-style",
@@ -316,7 +354,6 @@
     "empty-cells",
     "visibility",
     "opacity",
-    "-ms-filter: 'progid:DXImageTransform.Microsoft.Alpha",
     "filter: progid:DXImageTransform.Microsoft.Alpha(Opacity",
     "-ms-interpolation-mode",
     "-webkit-filter",
@@ -410,9 +447,15 @@
     "-ms-animation-direction",
     "-o-animation-direction",
     "animation-direction",
-    "-webkit-appearance",
-    "-moz-appearance",
-    "appearance",
+    "stroke",
+    "stroke-width",
+    "stroke-dasharray",
+    "stroke-dashoffset",
+    "stroke-linecap",
+    "fill",
+    "vector-effect",
+    "mask",
+    "clip-path",
     "-premailer-width",
     "-premailer-cellpadding",
     "-premailer-cellspacing"
