--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "grunt-analyze-css": "^1.0.0",
     "grunt-arialinter": "^0.2.1",
     "grunt-autoprefixer": "^3.0.3",
-    "grunt-closure-compiler": "^0.0.21",
     "grunt-colorguard": "^0.2.0",
     "grunt-concurrent": "^2.0.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -32,14 +31,13 @@
     "grunt-datauri": "^0.4.0",
     "grunt-fixmyjs": "^0.3.0",
     "grunt-htmlhint": "^0.4.1",
-    "grunt-imageoptim": "^1.4.1",
     "grunt-jscs": "^1.8.0",
     "grunt-jsinspect": "^0.4.1",
-    "grunt-modernizr": "^0.6",
     "grunt-processhtml": "^0.3.8",
     "grunt-remove-logging": "^0.2.0",
     "grunt-sass": "^1.0.0",
     "grunt-scss-lint": "^0.3.6",
+    "grunt-spritesmith": "^6.0.0",
     "grunt-string-replace": "^1.2.0",
     "grunt-svgmin": "^2.0.1",
     "grunt-uncss": "^0.4.3",
