--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "backbone": "*",
     "fontfaceobserver": "*",
+    "jquery": "*",
     "underscore": "*"
   },
   "devDependencies" : {
