--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "babelify": "*",
     "babel-preset-es2015": "*",
     "backstopjs": "*",
+    "chai": "*",
     "grunt": "~0.4.5",
     "grunt-analyze-css": "*",
     "grunt-arialinter": "*",
     "grunt-autoprefixer": "*",
+    "grunt-backstop": "*",
     "grunt-browserify": "*",
     "grunt-cleanempty": "*",
     "grunt-colorguard": "*",
     "grunt-concurrent": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-compress": "*",
+    "grunt-contrib-connect": "*",
     "grunt-contrib-copy": "*",
     "grunt-contrib-csslint": "*",
     "grunt-contrib-cssmin": "*",
@@ -38,9 +41,10 @@
     "grunt-csscss": "*",
     "grunt-datauri": "*",
     "grunt-fixmyjs": "*",
-    "grunt-htmlhint": "0.9.12",
+    "grunt-htmlhint": "*",
     "grunt-jscs": "*",
     "grunt-jsinspect": "*",
+    "grunt-mocha-test": "*",
     "grunt-prettify": "*",
     "grunt-processhtml": "*",
     "grunt-remove-logging": "*",
@@ -50,11 +54,10 @@
     "grunt-string-replace": "*",
     "grunt-svgmin": "*",
     "grunt-uncss": "*",
-    "load-grunt-tasks": "*"
+    "load-grunt-tasks": "*",
+    "mocha": "*"
   },
   "scripts": {
-    "preinstall": "npm cache clean",
-    "server": "server -d dev",
     "build": "grunt build",
     "start": "grunt watch",
     "test": "grunt test"
